# svelte-rs

./: .gitpod.yml  Cargo.toml  README.md  out.js  output.js  package.json  rust-toolchain.toml  rustfmt.toml  test.svelte
.devcontainer/: devcontainer.json
src/: ast.rs  grammar.pest  js.rs  lex.rs  lib.rs  main.rs  parse.rs
test/: b.js  index.svelte
