[package]
name = "svelte-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.5"
pest_derive = "2.5"
swc_core = { version = "0.51", features = [
    "common",
    "ecma_ast",
    "ecma_parser",
] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
