[package]
name = "svelte-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8"
ariadne = "0.1"
itertools = "0.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
